Modern Parallax: Prevent Overflow Using CSS

--- a/css/front-flex.less
+++ b/css/front-flex.less
@@ -24,6 +24,10 @@
 			z-index: 1;
 		}
 
+		.simpleParallax {
+ 			overflow: hidden;
+		}
+
 		.simpleParallax,
 		img[data-siteorigin-parallax] {
 			bottom: 0;
