--- a/css/front-legacy.less
+++ b/css/front-legacy.less
@@ -12,6 +12,10 @@
 			z-index: 1;
 		}
 
+		.simpleParallax {
+			overflow: hidden;
+		}
+
 		.simpleParallax,
 		img[data-siteorigin-parallax] {
 			bottom: 0;
